--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+Delivery02_GroupXX/[Ll]ibrary/
+Delivery02_GroupXX/[Tt]emp/
+Delivery02_GroupXX/[Oo]bj/
+Delivery02_GroupXX/[Bb]uild/
+Delivery02_GroupXX/[Bb]uilds/
+Delivery02_GroupXX/[Ll]ogs/
+Delivery02_GroupXX/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
